add_library(utils_meshUtils
  VertexUtils.hpp
  VertexUtils.cpp
  MeshFactory.hpp
  MeshFactory.cpp
  Triangulation.hpp
  Triangulation.cpp
  )

add_library(utils_camera
  Camera.hpp
  Camera.cpp
  )

add_library(utils_inputManager
  InputManager.hpp
  InputManager.cpp
  )

add_library(utils_tilemapUtils
  TileMapUtils.hpp
  TileMapUtils.cpp
  )
